fix/spacing-removed

--- a/styles/scss/vtex.flex-layout.scss
+++ b/styles/scss/vtex.flex-layout.scss
@@ -3414,8 +3414,6 @@
 
 .flexRow--4-banners-big {
   background-color: #fafafa;
-  padding-top: 16px;
-  padding-bottom: 32px;
 
   @media screen and (max-width: em(1024px)) {
     padding-top: 16px;
